logs/Slang/generated/hdlconv/hdlconvertor_p340.sv.log
name: hdlconvertor_p340
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p340.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p340.sv:2:2: error: language feature not yet supported
	clocking mem @(clock);
	^~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p340.sv:12:2: error: language feature not yet supported
	clocking cd1 @(posedge phi1);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p340.sv:18:2: error: language feature not yet supported
	clocking cd2 @(posedge phi2);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
